--- a/02_HTMLとCSSを極める（トランジション編）/060_背景色がスライドするボタン/start/style.scss
+++ b/02_HTMLとCSSを極める（トランジション編）/060_背景色がスライドするボタン/start/style.scss
@@ -16,7 +16,10 @@ $cBlack: black;
   transition: all 0.3s;
 
   &.slide-bg {
-    position: relative;
+	position: relative;
+	overflow: hidden;
+	z-index: 1;
+
     & span {
       display: inline-block;
       width: 100%;
@@ -26,7 +29,17 @@ $cBlack: black;
       top: 0;
 	  left: 0;
 	  transform: translateX(-100%);
-    }
+	  transition: transform 0.3s;
+	  z-index: -1;
+	}
+
+	&:hover {
+		color: $cWhite;
+
+		& span {
+			transform: none;
+		}
+	}
   }
 
   &:hover {
