--- a/02_HTMLとCSSを極める（トランジション編）/090_発展_演習_3Dアニメーション２/try.scss
+++ b/02_HTMLとCSSを極める（トランジション編）/090_発展_演習_3Dアニメーション２/try.scss
@@ -10,13 +10,49 @@ $cBlack: black;
     display: inline-block;
     transform-style: preserve-3d;
     perspective: 300px;
+    perspective-origin: -200% 50%;
     width: 150px;
     height: 50px;
     margin: 0 auto;
     cursor: pointer;
 
     &.cubic {
-      /** スタイルをここに追加。*/
+      & span {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 1px solid $cBlack;
+        line-height: 48px;
+        text-align: center;
+        transition: all 200ms ease-out;
+        transform-origin: center center -25px;
+      }
+
+      & .hovering {
+        background-color: $cBlack;
+        color: $cWhite;
+        transform: rotateX(90deg);
+        transform-origin: center center -25px;
+      }
+
+      & .default {
+        background-color: $cWhite;
+        color: $cBlack;
+        transform: rotateX(0);
+        transform-origin: center center -25px;
+      }
+
+      &:hover {
+        & .hovering {
+          transform: rotateX(0);
+        }
+
+        & .default {
+          transform: rotateX(-90deg);
+        }
+      }
     }
   }
 }
