--- a/02_HTMLとCSSを極める（トランジション編）/100_要素を思った配置する方法/start/style.css
+++ b/02_HTMLとCSSを極める（トランジション編）/100_要素を思った配置する方法/start/style.css
@@ -3,37 +3,39 @@
   background-color: #51dada;
   height: 600px;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .child {
-  background-color: orange;
-  width: 100px;
-  height: 100px;
   font-weight: 600;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
-  -ms-flex-preferred-size: 300px;
-      flex-basis: 300px;
 }
 
 .child.v1 {
+  background-color: orange;
+  -ms-flex-preferred-size: 300px;
+      flex-basis: 300px;
   -ms-flex-negative: 0;
       flex-shrink: 0;
 }
 
 .child.v2 {
   background-color: palevioletred;
-  -webkit-box-flex: 2;
-      -ms-flex-positive: 2;
-          flex-grow: 2;
+  -ms-flex-preferred-size: 300px;
+      flex-basis: 300px;
 }
 
 .child.v3 {
   background-color: rebeccapurple;
-  -webkit-box-flex: 3;
-      -ms-flex-positive: 3;
-          flex-grow: 3;
+  -ms-flex-preferred-size: 300px;
+      flex-basis: 300px;
 }
 
 /**
