--- a/03_HTMLとCSSを極める（アニメーション編）/020_アニメーションとキーフレーム/start/loader.css
+++ b/03_HTMLとCSSを極める（アニメーション編）/020_アニメーションとキーフレーム/start/loader.css
@@ -9,27 +9,49 @@ body {
   background-color: black;
   -webkit-animation: sk-bouncedelay 1.4s;
           animation: sk-bouncedelay 1.4s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  animation-direction: alternate-reverse;
+}
+
+.paused {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
 }
 
 @-webkit-keyframes sk-bouncedelay {
-  from {
+  0%,
+  50%,
+  80% {
     -webkit-transform: scale(0);
             transform: scale(0);
+    background-color: black;
   }
-  to {
+  20%,
+  60%,
+  100% {
     -webkit-transform: scale(1);
             transform: scale(1);
+    background-color: green;
   }
 }
 
 @keyframes sk-bouncedelay {
-  from {
+  0%,
+  50%,
+  80% {
     -webkit-transform: scale(0);
             transform: scale(0);
+    background-color: black;
   }
-  to {
+  20%,
+  60%,
+  100% {
     -webkit-transform: scale(1);
             transform: scale(1);
+    background-color: green;
   }
 }
 /*# sourceMappingURL=loader.css.map */
