--- a/03_HTMLとCSSを極める（アニメーション編）/020_アニメーションとキーフレーム/start/loader.scss
+++ b/03_HTMLとCSSを極める（アニメーション編）/020_アニメーションとキーフレーム/start/loader.scss
@@ -10,14 +10,31 @@ body {
   height: 100px;
   background-color: $cBlack;
   animation: sk-bouncedelay 1.4s;
+  animation-timing-function: ease;
+  //  animation-delay: 3s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate-reverse;
+  // animationが終了した時点の状態を画面に表示し続ける
+  //  animation-fill-mode: forwards;
+  //  animation-play-state: paused;
+}
+
+.paused {
+  animation-play-state: paused;
 }
 
 @keyframes sk-bouncedelay {
-  from {
+  0%,
+  50%,
+  80% {
     transform: scale(0);
+    background-color: $cBlack;
   }
 
-  to {
+  20%,
+  60%,
+  100% {
     transform: scale(1);
+    background-color: green;
   }
 }
