--- a/03_HTMLとCSSを極める（アニメーション編）/030_Mixinを使ってみよう/start/loader.css
+++ b/03_HTMLとCSSを極める（アニメーション編）/030_Mixinを使ってみよう/start/loader.css
@@ -9,6 +9,22 @@ body {
   background-color: black;
   -webkit-animation: sk-bouncedelay 1.4s;
           animation: sk-bouncedelay 1.4s;
+  -webkit-animation-name: sk-bouncedelay;
+          animation-name: sk-bouncedelay;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-direction: normal;
+          animation-direction: normal;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  animation-name: sk-bouncedelay;
+  animation-duration: 1s;
 }
 
 .paused {
