--- a/03_HTMLとCSSを極める（アニメーション編）/030_Mixinを使ってみよう/start/loader.scss
+++ b/03_HTMLとCSSを極める（アニメーション編）/030_Mixinを使ってみよう/start/loader.scss
@@ -4,12 +4,36 @@ body {
   text-align: center;
 }
 
+// メリット：引数にデフォルト値を持たせることができる
+@mixin animation(
+  $name,
+  $duration: 1s,
+  $timing-function: ease,
+  $delay: 0s,
+  $iteration-count: 1,
+  $direction: normal,
+  $fill-mode: forwards
+) {
+  animation: {
+    name: $name;
+    duration: $duration;
+    timing-function: $timing-function;
+    delay: $delay;
+    iteration-count: $iteration-count;
+    direction: $direction;
+    fill-mode: $fill-mode;
+  }
+  animation-name: $name;
+  animation-duration: $duration;
+}
+
 .rect {
   display: inline-block;
   width: 100px;
   height: 100px;
   background-color: $cBlack;
   animation: sk-bouncedelay 1.4s;
+  @include animation($name: sk-bouncedelay);
   // animation-timing-function: ease;
   // animation-delay: 3s;
   // animation-iteration-count: infinite;
