--- a/03_HTMLとCSSを極める（アニメーション編）/060_演習_色んなローダーを作ってみよう/try.scss
+++ b/03_HTMLとCSSを極める（アニメーション編）/060_演習_色んなローダーを作ってみよう/try.scss
@@ -1,6 +1,103 @@
 @import "mixin";
 
 .try {
-  /** ここに記述しよう */
-  
+    .spinner {
+        width: 40px;
+        height: 40px;
+        background-color: #333;
+        margin: 100px auto;
+
+        @include animation(
+            $name: sk-myrotate,
+            $duration: 1.2s,
+            $iteration-count: infinite,
+            $timing-function: ease-in-out
+        );
+    }
+
+    @keyframes sk-myrotate {
+        50% {
+            transform: perspective(120px) rotateX(-180deg);
+        }
+        100% {
+            transform: perspective(120px) rotateX(-180deg) rotateY(-180deg);
+        }
+    }
+
+    .double-spinner {
+        width: 40px;
+        height: 40px;
+        position: relative;
+        margin: 100px auto;
+
+        & > div {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            background-color: #333;
+            opacity: 0.6;
+            position: absolute;
+            top: 0;
+            left: 0;
+
+            @include animation(
+                $name: sk-mybounce,
+                $duration: 2s,
+                $timing-function: ease-in-out,
+                $iteration-count: infinite
+            );
+
+            &:nth-child(2) {
+                animation-delay: -1s;
+            }
+        }
+    }
+
+    @keyframes sk-mybounce {
+        0%,
+        100% {
+            transform: scale(0);
+        }
+        50% {
+            transform: scale(1);
+        }
+    }
+
+    .rect-spinner {
+        width: 50px;
+        height: 40px;
+        margin: 100px auto;
+        letter-spacing: -2px;
+
+        & > div {
+            background-color: #333;
+            height: 100%;
+            width: 6px;
+            display: inline-block;
+
+            @include animation(
+                $name: sk-rectwave,
+                $duration: 1.2s,
+                $iteration-count: infinite,
+                $timing-function: ease-in-out
+            );
+
+            @for $i from 1 through 5 {
+                &:nth-child(#{$i}) {
+                    animation-delay: -1300ms + 100 * $i;
+                }
+            }
+        }
+    }
+
+    @keyframes sk-rectwave {
+        0%,
+        40%,
+        100% {
+            transform: scaleY(0.4);
+        }
+        20% {
+            transform: scaleY(1);
+        }
+    }
 }
