--- a/03_HTMLとCSSを極める（アニメーション編）/060_演習_色んなローダーを作ってみよう/try.css
+++ b/03_HTMLとCSSを極める（アニメーション編）/060_演習_色んなローダーを作ってみよう/try.css
@@ -1,12 +1,12 @@
 .try .spinner {
-  width: 40px;
   height: 40px;
+  width: 40px;
   background-color: #333;
   margin: 100px auto;
   -webkit-animation-name: sk-myrotate;
           animation-name: sk-myrotate;
-  -webkit-animation-duration: 1.2s;
-          animation-duration: 1.2s;
+  -webkit-animation-duration: 1200ms;
+          animation-duration: 1200ms;
   -webkit-animation-timing-function: ease-in-out;
           animation-timing-function: ease-in-out;
   -webkit-animation-delay: 0s;
@@ -42,23 +42,21 @@
 }
 
 .try .double-spinner {
-  width: 40px;
   height: 40px;
-  position: relative;
+  width: 40px;
   margin: 100px auto;
+  position: relative;
 }
 
 .try .double-spinner > div {
-  width: 100%;
   height: 100%;
-  border-radius: 50%;
+  width: 100%;
   background-color: #333;
+  border-radius: 50%;
   opacity: 0.6;
   position: absolute;
-  top: 0;
-  left: 0;
-  -webkit-animation-name: sk-mybounce;
-          animation-name: sk-mybounce;
+  -webkit-animation-name: sk-doublebounce;
+          animation-name: sk-doublebounce;
   -webkit-animation-duration: 2s;
           animation-duration: 2s;
   -webkit-animation-timing-function: ease-in-out;
@@ -78,27 +76,27 @@
           animation-delay: -1s;
 }
 
-@-webkit-keyframes sk-mybounce {
+@-webkit-keyframes sk-doublebounce {
   0%,
   100% {
-    -webkit-transform: scale(0);
-            transform: scale(0);
-  }
-  50% {
     -webkit-transform: scale(1);
             transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
   }
 }
 
-@keyframes sk-mybounce {
+@keyframes sk-doublebounce {
   0%,
   100% {
-    -webkit-transform: scale(0);
-            transform: scale(0);
-  }
-  50% {
     -webkit-transform: scale(1);
             transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
   }
 }
 
@@ -106,6 +104,7 @@
   width: 50px;
   height: 40px;
   margin: 100px auto;
+  text-align: center;
   letter-spacing: -2px;
 }
 
@@ -116,8 +115,8 @@
   display: inline-block;
   -webkit-animation-name: sk-rectwave;
           animation-name: sk-rectwave;
-  -webkit-animation-duration: 1.2s;
-          animation-duration: 1.2s;
+  -webkit-animation-duration: 1200ms;
+          animation-duration: 1200ms;
   -webkit-animation-timing-function: ease-in-out;
           animation-timing-function: ease-in-out;
   -webkit-animation-delay: 0s;
