--- a/03_HTMLとCSSを極める（アニメーション編）/060_演習_色んなローダーを作ってみよう/try.scss
+++ b/03_HTMLとCSSを極める（アニメーション編）/060_演習_色んなローダーを作ってみよう/try.scss
@@ -2,16 +2,16 @@
 
 .try {
     .spinner {
-        width: 40px;
         height: 40px;
+        width: 40px;
         background-color: #333;
         margin: 100px auto;
 
         @include animation(
             $name: sk-myrotate,
-            $duration: 1.2s,
-            $iteration-count: infinite,
-            $timing-function: ease-in-out
+            $duration: 1200ms,
+            $timing-function: ease-in-out,
+            $iteration-count: infinite
         );
     }
 
@@ -25,26 +25,24 @@
     }
 
     .double-spinner {
-        width: 40px;
         height: 40px;
-        position: relative;
+        width: 40px;
         margin: 100px auto;
+        position: relative;
 
         & > div {
-            width: 100%;
             height: 100%;
-            border-radius: 50%;
+            width: 100%;
             background-color: #333;
+            border-radius: 50%;
             opacity: 0.6;
             position: absolute;
-            top: 0;
-            left: 0;
 
             @include animation(
-                $name: sk-mybounce,
+                $name: sk-doublebounce,
                 $duration: 2s,
-                $timing-function: ease-in-out,
-                $iteration-count: infinite
+                $iteration-count: infinite,
+                $timing-function: ease-in-out
             );
 
             &:nth-child(2) {
@@ -53,13 +51,13 @@
         }
     }
 
-    @keyframes sk-mybounce {
+    @keyframes sk-doublebounce {
         0%,
         100% {
-            transform: scale(0);
+            transform: scale(1);
         }
         50% {
-            transform: scale(1);
+            transform: scale(0);
         }
     }
 
@@ -67,6 +65,7 @@
         width: 50px;
         height: 40px;
         margin: 100px auto;
+        text-align: center;
         letter-spacing: -2px;
 
         & > div {
@@ -77,14 +76,14 @@
 
             @include animation(
                 $name: sk-rectwave,
-                $duration: 1.2s,
+                $duration: 1200ms,
                 $iteration-count: infinite,
                 $timing-function: ease-in-out
             );
 
             @for $i from 1 through 5 {
                 &:nth-child(#{$i}) {
-                    animation-delay: -1300ms + 100 * $i;
+                    animation-delay: -1300ms + 100ms * $i;
                 }
             }
         }
